@@ -16,6 +16,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #11802:  The cache in filecmp now has a maximum size of 100 so that
+  it won't grow without bound.
+
 - Issue #12404: Remove C89 incompatible code from mmap module. Patch by Akira
   Kitada.
 
